# test

./: .gitignore  README.md  URL  headers  sync.sh  test.sh
ASN.1/: readme-asn1.txt
arch/: readme.md
assembler/: exit-32.asm  hello.S  write-32.asm
atomic/: atomic64.h  atomic_long_inc.c  primitives.h
bpf/: 60s.sh  README.md  bpf.man.freebsd.txt  readme-libbpf-tools.txt
c/: a.out  and-or-not.c  heap-addr.c  local-stack-fmt-string.c  memshow.c  nullptr.c  print-ulong16.c  while.c  xor.c
c/glibc/dlfcn/dpatch/: CMakeLists.txt  README.md  Vagrantfile
c/glibc/dlfcn/dpatch/demo/: CMakeLists.txt  charlie.c  external_patch.patch  self_patch.c  self_patch.patch
c/glibc/dlfcn/dpatch/dpatch/: CMakeLists.txt  machine_code.c  main.c  patch.c  patch_script.c  patch_set.c  status.c  x64_code_generator.c
c/glibc/dlfcn/dpatch/dpatch/include/: code_generator.h  machine_code.h  patch.h  patch_script.h  patch_set.h  status.h
cas/: readme-cas.txt
cmake/multi-exe/: CMakeLists.txt  hello2.c
cpp/: reference.c  volatile.txt
cpu/: readme-cpu.txt
docker/: guide-start.md
dpdk/: readme.md  rte_mem_virt2phy-my.c  rte_mem_virt2phy.c  virt2phy.c
firewall/: readme-firewall.txt
fs-filesystem/: fs.man.txt
futex/: futextest.h
gcc/: update-gcc-compiler.txt
gdb/: gdb.man.txt  readme-gdb.txt
git/: credential.helper.sh  git-clean.sh  git-config.sh  git-diff.sh  git-log--online--decorate--graph.sh  git-status.sh  git-tag.sh  gitconfig  ignore-filemod.sh  submodule.sh
glibc/: __thread_self.c  nolibc-test.c  nolibc.h  readme.txt
golang/: COMPILE  INSTALL
gperftools/: demo1.cc  pprof.man.txt  readme.txt
gtest/github/C-Unit-Test-Demo/src/my_lib/: A.c  A.h  CMakeLists.txt  Microwave.c  Microwave.h  Radio.c  Radio.h  Switchable.h  Switcher.c  Switcher.h
gtest/github/C-Unit-Test-Demo/tests/: CMakeLists.txt  gtest_main.cpp
gtest/github/C-Unit-Test-Demo/tests/my_lib/: MyLib_AllTests.cmake  SwitchableMock.c  SwitchableMock.h  testA.cpp  testMicrowave.cpp  testRadio.cpp  testSwitcher.cpp
hugepage/: clear_hugedir.c
ipc/: README.md
jemalloc/: INSTALL-files.txt  compile-jemalloc.sh  install.sh  intro.txt  jemalloc-5.2.1-doc.txt  jemalloc.conf.json  jemalloc.conf2.json  readme.txt  size-classes.txt  test1.c  test_threads.cc
jit/: readme-jit.txt
json/: readme-json.txt
libcare/: readme.md
libcareplus/: readme.md
libpcap/: README.md
libunwind/: readme-unwind.txt
liburing/: demo.c  readme-io_uring.txt  readme-liburing.txt
libvirt/: README.rst  readme-libvirt.txt
libxml2/: modifyxml.c  newformatxml.c  parsexml.c
linux/: README.md  VERSION
linux-5.0/: __percpu.h  _do_fork.c  arch-arm64-kernel-head.S  arch-arm64-kernel-vmlinux.lds.S  arch-x86-kernel-vmlinux.lds.S  copy.sh  copy_files.c  copy_process.c  cpumask_t.h  do_IRQ.c  include-asm-generic-vmlinux.lds.h  mm-page_alloc.c  mm-rmap.c  pelt.c  proc-pagetypeinfo  profile_tick.c  readme.txt  rq.h  runnable_avg_yN_inv.c  sched-domain-SD_XXX.c  sched_class.h  sched_entity.h  sched_prio_to_weight.c  sched_prio_to_wmult.c  set_load_weight.c  smp_init_cpus.c  softirq_vec.c  struct-files_struct.h  struct-irq_cpustat_t.h  struct-irqdesc.h  struct-sched_entity.h  struct-softirq_action.h  struct-task_struct.h  struct-thread_info.h  struct-thread_struct.h  struct-thread_union.h  struct-timer_list.h  sys_waitpid.c  task_struct.h
linux-5.6.5/: System.map.x86_64
lua/: README
memory/: memory-mountain.c
mempool/: readme.txt
memwatch/: readme-memwatch.txt
mimalloc/: readme-mimalloc.txt
mqtt/: readme-mqtt.md  readme.md
mtmalloc/: mtmalloc.man.txt
nanolog/: README.md  readme-nanolog.txt
netmap/: intro.1.txt  readme-netmap.txt
nfs/: nfs.man.txt  readme-nfs.txt
ninja/: readme-ninja.txt
openldap/: readme-ldap.txt
ostree/: README
pmdk/: readme.txt
redis/: asciilogo.h  atomicvar.h
regular-expression/: regex.man.7.txt
rpc/: readme-rpc.txt  rpc.man.txt
scripts/: QA.sh  Xshell.sh  bcc.sh  chg_own.sh  clean.sh  copyright.sh  coredump.sh  hi.sh  ipswap.sh  mdtab.sh  subfix.sh  win2linux.sh
sdt/: readme-sdt.txt
sentinel/: readme.txt
shell/: PS1.txt  mangle.sh  mangle.txt  rename.c  rename.sh  rename.txt
slab/: slab-article01.md  slab-article02.md
spdk/: readme.txt
ssh/: ssh-keygen.man.txt  sshd.man.txt
tcmalloc/: install.txt  readme.txt
unicode/: readme-unicode.txt  unicode.man.txt
valgrind/: readme-valgrind.txt  valgrind-listener.man.txt
virtio/: readme-virtio.txt
vmem/: libvmem.man.txt  libvmmalloc.man.txt
vos/: readme.txt
x86_64/: TSS.txt  readme-x86-regs.txt  register-stack.txt
zero-copy/: IO-buffer.txt  (+2 more)
(+4179 files in other folders)
